# roboasset-msgs

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: Pose.action  RecordTopic.action
msg/: AnglesDetection.msg  ArucoMarkers.msg  BezierControlPoints.msg  BezierSpline.msg  CollisionPoint.msg  CollisionPose.msg  DelsysEMG.msg  DelsysIMU.msg  FittedBezierSpline.msg  IiwaMoveitJoints.msg  IiwaUnity.msg  Landmarks.msg  MindroveEmg.msg  OrientationBezier.msg  PoseDetection.msg  PositionBezier.msg  SignalLight.msg  TouchSensor.msg  TrafficLight.msg  UValues.msg  VectorLandmarks.msg
srv/: BagInfo.srv  BezierFitting.srv  BezierSampling.srv  ControlModeService.srv  RecordTopic.srv  RobotInfo.srv  SendEEPoses.srv  SendFiles.srv  SendJointPoses.srv  SendWrenches.srv  SetControlModeCobot.srv
